页面大体完成

--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
-
-
-
-
-
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.2</version>
+    </dependency>
 
 
 
